# $Id$

stockdir = $(datadir)/icons/hicolor/16x16/stock/media
stock_DATA =								\
	audio-volume-00.png						\
	audio-volume-01.png						\
	audio-volume-02.png						\
	audio-volume-03.png						\
	audio-volume-04.png						\
	audio-volume-05.png						\
	audio-volume-06.png						\
	stock_xfce4-mixer-record.png					\
	stock_xfce4-mixer-no-record.png					\
	stock_xfce4-mixer-muted.png					\
	stock_xfce4-mixer-no-muted.png

EXTRA_DIST =								\
	$(stock_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
