# $Id: Makefile.am 22065 2006-06-11 17:13:17Z benny $

appsdir = $(datadir)/icons/hicolor/24x24/apps
apps_DATA =								\
	xfce4-mixer.png

stockdir = $(datadir)/icons/hicolor/24x24/stock/media
stock_DATA =								\
	audio-volume-00.png						\
	audio-volume-01.png						\
	audio-volume-02.png						\
	audio-volume-03.png						\
	audio-volume-04.png						\
	audio-volume-05.png						\
	stock_xfce4-mixer-record.png					\
	stock_xfce4-mixer-no-record.png					\
	stock_xfce4-mixer-muted.png					\
	stock_xfce4-mixer-no-muted.png

EXTRA_DIST =								\
	$(apps_DATA)							\
	$(stock_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
