# $Id$

iconsdir = $(pkgdatadir)/icons/hicolor/24x24/status
icons_DATA =								\
	xfce4-mixer-volume-muted.png					\
	xfce4-mixer-volume-ultra-low.png				\
	xfce4-mixer-volume-low.png					\
	xfce4-mixer-volume-low-medium.png				\
	xfce4-mixer-volume-medium.png					\
	xfce4-mixer-volume-high.png					\
	xfce4-mixer-volume-very-high.png				\
	xfce4-mixer-record.png						\
	xfce4-mixer-no-record.png					\
	xfce4-mixer-muted.png						\
	xfce4-mixer-no-muted.png

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
