# $Id$

stockdir = $(datadir)/icons/hicolor/48x48/stock/media
stock_DATA =								\
	stock_xfce4-mixer-volume-00.png					\
	stock_xfce4-mixer-volume-01.png					\
	stock_xfce4-mixer-volume-02.png					\
	stock_xfce4-mixer-volume-03.png					\
	stock_xfce4-mixer-volume-04.png					\
	stock_xfce4-mixer-volume-05.png					\
	stock_xfce4-mixer-volume-06.png					\
	stock_xfce4-mixer-record.png					\
	stock_xfce4-mixer-no-record.png					\
	stock_xfce4-mixer-muted.png					\
	stock_xfce4-mixer-no-muted.png

EXTRA_DIST =								\
	$(stock_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
