# $Id$

stockdir = $(datadir)/icons/hicolor/scalable/stock/media
stock_DATA =								\
	audio-volume-00.svg						\
	audio-volume-01.svg						\
	audio-volume-02.svg						\
	audio-volume-03.svg						\
	audio-volume-04.svg						\
	audio-volume-05.svg						\
	audio-volume-06.svg						\
	stock_xfce4-mixer-record.svg					\
	stock_xfce4-mixer-no-record.svg					\
	stock_xfce4-mixer-muted.svg					\
	stock_xfce4-mixer-no-muted.svg

EXTRA_DIST =								\
	$(stock_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
