# $Id$

stockdir = $(datadir)/icons/hicolor/scalable/stock/media
stock_DATA =								\
	stock_xfce4-mixer-volume-00.svg					\
	stock_xfce4-mixer-volume-01.svg					\
	stock_xfce4-mixer-volume-02.svg					\
	stock_xfce4-mixer-volume-03.svg					\
	stock_xfce4-mixer-volume-04.svg					\
	stock_xfce4-mixer-volume-05.svg					\
	stock_xfce4-mixer-volume-06.svg					\
	stock_xfce4-mixer-record.svg					\
	stock_xfce4-mixer-no-record.svg					\
	stock_xfce4-mixer-muted.svg					\
	stock_xfce4-mixer-no-muted.svg

EXTRA_DIST =								\
	$(stock_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
