# $Id$

iconsdir = $(pkgdatadir)/icons/hicolor/scalable/status
icons_DATA =								\
	xfce4-mixer-volume-muted.svg					\
	xfce4-mixer-volume-ultra-low.svg				\
	xfce4-mixer-volume-low.svg					\
	xfce4-mixer-volume-low-medium.svg				\
	xfce4-mixer-volume-medium.svg					\
	xfce4-mixer-volume-high.svg					\
	xfce4-mixer-volume-very-high.svg				\
	xfce4-mixer-record.svg						\
	xfce4-mixer-no-record.svg					\
	xfce4-mixer-muted.svg						\
	xfce4-mixer-no-muted.svg

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
